# dclaw-trademark

./: .env.example  AGENTS.md  CHECKLIST.md  PLAN-v1.2.md  README.md  REVISED-PRD.md  TEAM-ONBOARDING-GUIDE.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/versions/: 8ea3e1140795_add_opposition_search_query_subscription.py  9f9cd1759abb_initial_schema.py
backend/app/api/: main.py
backend/app/api/v1/: __init__.py  ai.py  billing.py  classes.py  deadlines.py  demo.py  oppositions.py  search.py  trademarks.py  watchlist.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  deadline.py  opposition.py  search_query.py  subscription.py  trademark.py  watchlist.py
backend/app/repositories/: deadline_repo.py  opposition_repo.py  trademark_repo.py  watchlist_repo.py
backend/app/schemas/: deadline.py  opposition.py  trademark.py  watchlist.py
backend/app/services/: application_drafter.py  class_recommender.py  clearance_search.py  copilot.py  deadline_engine.py  demo.py  nice_classes.py  scheduler.py  similarity.py
backend/app/services/registries/: uspto.py
backend/src/dclaw_trademark/: config.py  main.py  models.py
backend/src/dclaw_trademark/api/: routes.py
backend/tests/: conftest.py  test_ai.py  test_ai_draft.py  test_billing.py  test_classes.py  test_deadlines.py  test_oppositions.py  test_search.py  test_trademarks.py  test_watchlist.py
docs/: README.md  meta.json
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+53 files in other folders)
