[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dclaw-trademark"
version = "0.1.0"
description = "DClaw Trademark - Trademark monitoring"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/dclaw_trademark"]
